File browser filter not working correctly #55503

Closed
opened 2018-06-16 02:39:34 +02:00 by Philipp · 9 comments

System Information
Win 10, GTX 680

Blender Version
Broken: 2.79b - 2.80.0-git.18cc880

Short description of error
The filter in the file browser stops working when there are too many file endings in the filter and every file is shown instead of the filtered ones only.

Exact steps for others to reproduce the error
Open a file browser like that:

class OpenFileBrowser(bpy.types.Operator, bpy_extras.io_utils.ImportHelper):
    bl_idname = 'open.file_browser'
    bl_label = 'Open FIle Browser'

    filter_glob = bpy.props.StringProperty(
        default="*.pmx;*.pmd;*.xps;*.mesh;*.ascii;*.smd;*.qc;*.vta;*.dmx;*.fbx;*.dae",
        options={'HIDDEN'}
    )

    def execute(self, context):
        return {'FINISHED'}

This will result in the filter not working. As soon as you remove the ".dae" extension from the filter, it works again.

**System Information** Win 10, GTX 680 **Blender Version** Broken: 2.79b - 2.80.0-git.18cc880 **Short description of error** The filter in the file browser stops working when there are too many file endings in the filter and every file is shown instead of the filtered ones only. **Exact steps for others to reproduce the error** Open a file browser like that: ``` class OpenFileBrowser(bpy.types.Operator, bpy_extras.io_utils.ImportHelper): bl_idname = 'open.file_browser' bl_label = 'Open FIle Browser' filter_glob = bpy.props.StringProperty( default="*.pmx;*.pmd;*.xps;*.mesh;*.ascii;*.smd;*.qc;*.vta;*.dmx;*.fbx;*.dae", options={'HIDDEN'} ) def execute(self, context): return {'FINISHED'} ``` This will result in the filter not working. As soon as you remove the ".dae" extension from the filter, it works again.
Author

Added subscriber: @Hotox

Added subscriber: @Hotox
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Bastien Montagne was assigned by Philipp Oeser 2018-06-18 11:11:56 +02:00
Member

D3486 should fix it

[D3486](https://archive.blender.org/developer/D3486) should fix it

This will fix that case, yes, but then you can find another broken one when hitting the 256 limit. We need to check/truncate the string properly here (and warn about it).

This will fix that case, yes, but then you can find another broken one when hitting the 256 limit. We need to check/truncate the string properly here (and warn about it).
Member

@mont29: you mean truncation like you did already in 66aa4af836 [but more verbose? (how? printf/warn about truncation?)]

@mont29: you mean truncation like you did already in 66aa4af836 [but more verbose? (how? printf/warn about truncation?)]

@lichtwerk ah, nice finding of original faulty commit ;)

What I'll do here is add a new func in BLI_path that checks for stupid things like last group of the pattern being a wildcard-only one, when there are more than one group.

That's what happens in case reported here, truncation of string leaves you with a stupid * last pattern ;)

Fix is incoming!

@lichtwerk ah, nice finding of original faulty commit ;) What I'll do here is add a new func in BLI_path that checks for stupid things like last group of the pattern being a wildcard-only one, when there are more than one group. That's what happens in case reported here, truncation of string leaves you with a stupid `*` last pattern ;) Fix is incoming!

This issue was referenced by 579631819f

This issue was referenced by 579631819f0136ab0fbb0f6c7c21265b468940dc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Ahh, get it, thanx @mont29!

Ahh, get it, thanx @mont29!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55503
No description provided.